--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <link rel="stylesheet" href="styles.css" />
   <body>
     <canvas></canvas>
 
-    <script type="module" src="scripts/chip8.js"></script>
+    <script type="module" src="scripts/chip8.mjs"></script>
   </body>
 </html>
