Fix: Game-Change

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       </select>
     </div>
     <div class="controls">
+      <div>
+        *please refresh the <br />
+        website to change games*
+      </div>
       <h1>Controls:</h1>
     </div>
 
